[FIX] point_of_sale: kitchen receipt long name
When printing long product names with long variants, the lines were
overlapping.

Steps to reproduce:
-------------------
* Create a product with some long variant names
* Setup a kitchen printer
* Add the order to a PoS order
* Print the order on the kitchen printer
> Observation: The product name and variant name are overlapping

Before:

After:

opw-4414311

closes odoo/odoo#192544

--- a/addons/point_of_sale/static/src/app/generic_components/product_card/product_card.scss
+++ b/addons/point_of_sale/static/src/app/generic_components/product_card/product_card.scss
@@ -7,6 +7,14 @@
     object-fit: contain;
 }
 
+.pos-receipt {
+    .product-name {
+        -webkit-line-clamp: unset;
+        overflow: auto;
+        overflow-wrap: break-word;
+    }
+}
+
 .product-name {
 
     box-sizing: border-box;
